--- a/index.html
+++ b/index.html
@@ -694,6 +694,264 @@
       </div>
     </div>
   </section>
+  <!-- Project Modals -->
+  <div class="project-modals">
+    <!-- Modal 1 -->
+    <div id="modal1" class="modal fade">
+      <div class="modal-dialog modal-lg mt-7">
+        <div class="modal-content bg-secondary p-5">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="images/project-1.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+              <h3>Orkla Foods</h3>
+              <p>
+                Aliquam at accumsan nibh. Praesent pretium ut tortor ac commodo.
+                Integer semper quam at rutrum interdum. Mauris eu diam ac urna
+                laoreet mollis et
+              </p>
+              <p>
+                Praesent lacus tortor, facilisis non enim eu, luctus semper velit.
+                Curabitur faucibus diam in lectus.
+              </p>
+              <a href="#" class="btn btn-primary text-white">
+                Details
+              </a>
+              <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 2 -->
+    <div id="modal2" class="modal fade">
+      <div class="modal-dialog modal-lg mt-7">
+        <div class="modal-content bg-secondary p-5">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="images/project-2.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+              <h3>First Bank</h3>
+              <p>
+                Aliquam at accumsan nibh. Praesent pretium ut tortor ac commodo.
+                Integer semper quam at rutrum interdum. Mauris eu diam ac urna
+                laoreet mollis et
+              </p>
+              <p>
+                Praesent lacus tortor, facilisis non enim eu, luctus semper velit.
+                Curabitur faucibus diam in lectus.
+              </p>
+              <a href="#" class="btn btn-primary text-white">
+                Details
+              </a>
+              <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 3 -->
+    <div id="modal3" class="modal fade">
+      <div class="modal-dialog modal-lg mt-7">
+        <div class="modal-content bg-secondary p-5">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="images/project-3.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+              <h3>All Sweets</h3>
+              <p>
+                Aliquam at accumsan nibh. Praesent pretium ut tortor ac commodo.
+                Integer semper quam at rutrum interdum. Mauris eu diam ac urna
+                laoreet mollis et
+              </p>
+              <p>
+                Praesent lacus tortor, facilisis non enim eu, luctus semper velit.
+                Curabitur faucibus diam in lectus.
+              </p>
+              <a href="#" class="btn btn-primary text-white">
+                Details
+              </a>
+              <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 4 -->
+    <div id="modal4" class="modal fade">
+      <div class="modal-dialog modal-lg mt-7">
+        <div class="modal-content bg-secondary p-5">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="images/project-4.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+              <h3>Fast Courier</h3>
+              <p>
+                Aliquam at accumsan nibh. Praesent pretium ut tortor ac commodo.
+                Integer semper quam at rutrum interdum. Mauris eu diam ac urna
+                laoreet mollis et
+              </p>
+              <p>
+                Praesent lacus tortor, facilisis non enim eu, luctus semper velit.
+                Curabitur faucibus diam in lectus.
+              </p>
+              <a href="#" class="btn btn-primary text-white">
+                Details
+              </a>
+              <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 5 -->
+    <div id="modal5" class="modal fade">
+      <div class="modal-dialog modal-lg mt-7">
+        <div class="modal-content bg-secondary p-5">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="images/project-5.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+              <h3>Lyra Market</h3>
+              <p>
+                Aliquam at accumsan nibh. Praesent pretium ut tortor ac commodo.
+                Integer semper quam at rutrum interdum. Mauris eu diam ac urna
+                laoreet mollis et
+              </p>
+              <p>
+                Praesent lacus tortor, facilisis non enim eu, luctus semper velit.
+                Curabitur faucibus diam in lectus.
+              </p>
+              <a href="#" class="btn btn-primary text-white">
+                Details
+              </a>
+              <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal 6 -->
+    <div id="modal6" class="modal fade">
+      <div class="modal-dialog modal-lg mt-7">
+        <div class="modal-content bg-secondary p-5">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="images/project-6.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+              <h3>Monday Stores</h3>
+              <p>
+                Aliquam at accumsan nibh. Praesent pretium ut tortor ac commodo.
+                Integer semper quam at rutrum interdum. Mauris eu diam ac urna
+                laoreet mollis et
+              </p>
+              <p>
+                Praesent lacus tortor, facilisis non enim eu, luctus semper velit.
+                Curabitur faucibus diam in lectus.
+              </p>
+              <a href="#" class="btn btn-primary text-white">
+                Details
+              </a>
+              <button class="btn btn-light" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Newsletter -->
+  <section id="newsletter" class="newsletter my-6">
+    <div class="container">
+      <div class="row mb-4">
+        <div class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center">
+          <h2 class="fw-bold">Subscribe And Follow</h2>
+          <p>
+            Stay updated with our latest news and announcements. Subscribe to our
+            newsletter and follow us on social media for valuable insights and
+            exciting updates.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center">
+          <div class="input-group mb-3">
+            <input type="email" class="form-control" placeholder="Enter Email Address" />
+            <button class="btn btn-primary text-white rounded-0" type="button">
+              Submit
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer bg-secondary py-6">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 my-3">
+          <h6>About Vera</h6>
+          <p>
+            Vera is a dedicated software solutions company that aims to provide
+            exceptional services to its clients. We are committed to delivering
+            innovative and customized solutions that meet your specific business
+            needs.
+          </p>
+        </div>
+        <div class="col-md-4 my-3">
+          <h6>Links</h6>
+          <ul class="list-unstyled">
+            <li>
+              Important: <a href="#">Terms & Conditions</a>,
+              <a href="privacy.html">Privacy Policy</a>
+            </li>
+            <li>
+              Useful: <a href="index.html#expertise">Expertise</a>,
+              <a href="index.html#pricing">Pricing</a>,
+              <a href="index.html#newsletter">Newsletter</a>
+            </li>
+            <li>
+              Menu: <a href="index.html">Home</a>, <a href="index.html#details">Details</a>,
+              <a href="index.html#solutions">Solutions</a>,
+              <a href="index.html#projects">Projects</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4 my-3">
+          <div class="mb-4">
+            <a href="#" class="text-decoration-none">
+              <i class="fab fa-facebook fa-3x text-light mx-2"></i>
+            </a>
+            <a href="#" class="text-decoration-none">
+              <i class="fab fa-twitter fa-3x text-light mx-2"></i>
+            </a>
+            <a href="#" class="text-decoration-none">
+              <i class="fab fa-instagram fa-3x text-light mx-2"></i>
+            </a>
+            <a href="#" class="text-decoration-none">
+              <i class="fab fa-pinterest fa-3x text-light mx-2"></i>
+            </a>
+          </div>
+          <p>
+            We would love to hear from you
+            <a href="mailto:contact@site.com"><strong>contact@site.com</strong></a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="js/replaceme.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
