Fixed svg color

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
   <!-- Header -->
   <header class="header position-relative">
-    <img src="images/vertical-decoration-left.svg" alt=""
-      class="vertical-decoration position-absolute d-none d-md-block" />
+    <object type="image/svg+xml" data="images/vertical-decoration-left.svg"
+      class="vertical-decoration position-absolute d-none d-md-block"></object>
     <div class="container">
       <div class="row">
         <div class="col-md-6 pt-5">
